[package]
name = "xrebalance"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core Lightning plugin: circular self-rebalance executor built on askrene"
repository = "https://github.com/ksedgwic/xrebalance"

[dependencies]
anyhow = "1"
cln-plugin = "0.7"
cln-rpc = "0.7"
futures = "0.3"
hex = "0.4"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync", "time"] }
